2008-07-23  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsRule.cs: Fix [Problem] and [Solution]
	to match the rule (wrong copy-paste). Don't process literals (e.g. 
	const) since their value is copied into IL and this results in many
	false positives (handled or not).
	* Makefile.am: Compile without optimization since newer gmcs is
	now converting "" into String.Empty automagically (making our test 
	cases fails).

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeNumberOfLocalVariablesRule.cs: Rule to warn if a method
	has a very large of local variables - since it's likely the JIT won't be
	able to do a good job assigning registers to them.
	* Makefile.am: add rule and tests to the build.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedPrivateFieldsRule.cs: Rule to warn if a private field
	is unused in a type.
	* Makefile.am: add rule and tests to the build.

2008-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make

2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidTypeGetTypeForConstantStringsRule.cs: Handle the case 
	where Resolve returns null (cannot find the required assemblies)
	* AvoidUncalledPrivateCodeRule.cs: Handle the case where Resolve 
	returns null (cannot find the required assemblies)
	* CompareWithStringEmptyEfficientlyRule.cs: Handle the case where
	Resolve returns null (cannot find the required assemblies)
	* MonoCompatibilityReviewRule.cs: Dispose as soon as possible.
	* Makefile.am: Rebuild if the framework has changed.

2008-07-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCastsRule.cs: New. Rule to check if the code 
	repeat some cast operations more than one time.
	* AvoidUncalledPrivateCodeRule.cs: Apply AvoidRepetitiveCastsRule
	to rule (self-test).
	* Gendarme.Rules.Performance.mdp: Update MD project file.
	* Makefile.am: add rule and tests to the build.
